--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compile group: 'org.bytedeco', name: 'opencv-platform', version: '4.1.2-1.5.2'
 }
